--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Interactive visualization tool for Kubernetes NetworkPolicy resources",
   "private": true,
   "dependencies": {
+    "@kubernetes/client-node": "^0.19.0",
+    "cors": "^2.8.5",
     "d3": "^7.8.5",
+    "express": "^4.18.2",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
@@ -18,6 +21,7 @@
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
+    "nodemon": "^3.0.1",
     "postcss": "^8.4.27",
     "postcss-loader": "^7.3.3",
     "style-loader": "^3.3.3",
@@ -27,7 +31,9 @@
     "webpack-dev-server": "^4.15.1"
   },
   "scripts": {
-    "start": "webpack serve --mode development --open",
+    "start": "node server.js",
+    "dev": "webpack serve --mode development --open",
+    "dev:server": "nodemon server.js",
     "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
