--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -4,3 +4,15 @@ description: A Helm chart for Kubernetes NetworkPolicy Visualizer
 type: application
 version: 0.1.0
 appVersion: "1.0.0"
+home: https://github.com/infnada/k8s-network-policy-visualizer
+sources:
+  - https://github.com/infnada/k8s-network-policy-visualizer
+maintainers:
+  - name: infnada
+    url: https://github.com/infnada
+keywords:
+  - kubernetes
+  - networkpolicy
+  - visualization
+  - security
+  - networking
