--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -31,7 +31,7 @@ jobs:
         uses: helm/chart-testing-action@v2.7.0
 
       - name: Run chart-testing (lint)
-        run: ct lint --target-branch ${{ github.event.repository.default_branch }} --charts helm/networkpolicy-visualizer
+        run: ct lint --target-branch ${{ github.event.repository.default_branch }} --charts helm
 
       - name: Create kind cluster
         uses: helm/kind-action@v1.12.0
@@ -39,7 +39,7 @@ jobs:
 
       - name: Run chart-testing (install)
         if: github.event_name != 'pull_request'
-        run: ct install --target-branch ${{ github.event.repository.default_branch }} --charts helm/networkpolicy-visualizer
+        run: ct install --target-branch ${{ github.event.repository.default_branch }} --charts helm
 
   release:
     name: Release Helm Chart
