--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "Interactive visualization tool for Kubernetes NetworkPolicy resources",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@kubernetes/client-node": "^1.2.0",
     "cors": "^2.8.5",
     "d3": "^7.8.5",
-    "express": "^5.1.0",
+    "express": "^4.21.1",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "react": "^19.1.0",
@@ -20,6 +21,9 @@
     "autoprefixer": "^10.4.14",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.5.3",
     "nodemon": "^3.0.1",
     "postcss": "^8.4.27",
@@ -35,7 +39,10 @@
     "dev": "webpack serve --mode development --open",
     "dev:server": "nodemon server.js",
     "build": "webpack --mode production",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint src/ server.js --ext .js,.jsx",
+    "lint:fix": "eslint src/ server.js --ext .js,.jsx --fix",
+    "lint:check": "eslint src/ server.js --ext .js,.jsx --max-warnings 0",
+    "test": "npm run lint:check && echo \"✓ Linting passed. Add your tests here.\""
   },
   "author": "",
   "license": "MIT"
