--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -70,7 +70,7 @@ jobs:
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.7.0
         with:
-          charts_dir: helm
+          charts_dir: .
           config: .github/configs/cr.yaml
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
