--- a/.github/configs/cr.yaml
+++ b/.github/configs/cr.yaml
@@ -2,6 +2,6 @@
 owner: infnada
 git-repo: k8s-network-policy-visualizer
 charts-repo-url: https://infnada.github.io/k8s-network-policy-visualizer
-index-path: ./index.yaml
+index-path: ./docs/index.yaml
 packages-with-index: true
 skip-existing: true
