--- a/.github/configs/cr.yaml
+++ b/.github/configs/cr.yaml
@@ -1,7 +1,7 @@
 # Configuration for chart-releaser
 owner: infnada
 git-repo: k8s-network-policy-visualizer
-charts-repo-url: https://infnada.github.io/k8s-network-policy-visualizer
+charts-repo-url: https://github.com/infnada/k8s-network-policy-visualizer/releases/download
 index-path: ./docs/index.yaml
 packages-with-index: true
 skip-existing: true
