--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@babel/core": "^7.22.9",
     "@babel/preset-env": "^7.22.9",
     "@babel/preset-react": "^7.22.5",
-    "autoprefixer": "^10.4.14",
+    "@tailwindcss/postcss": "^4.1.7",
+    "autoprefixer": "^10.4.21",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "eslint": "^8.57.0",
@@ -26,10 +27,10 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.5.3",
     "nodemon": "^3.0.1",
-    "postcss": "^8.4.27",
+    "postcss": "^8.5.3",
     "postcss-loader": "^7.3.3",
     "style-loader": "^3.3.3",
-    "tailwindcss": "^3.3.3",
+    "tailwindcss": "^4.1.7",
     "webpack": "^5.99.9",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
